yoshimi 1.7.2 M

2020-8-25 Will
* Click on mixer volume clears all overloads on that column.
  But overload warning only set for currently visible row.
* Small clarifying change to part send text in main window.

2020-8-24 Will
* Enabling part kit items now goes through indirect transfers.
  Stops Xruns, but part is now silenced during this.
* First time enabling of PadSynth applies parameters.
  Has to silence the part in the process.

2020-8-19 Will
* Commented out 'Warnings as errors' in CMakeLists.txt
  Was causing problems for less experienced builders.

2020-8-19 Will
* Reverted removal of lv2ext/programs#Interface
  Needed by Carla to identify banks.
* Ensured last fix was applied to both yoshimi & yoshimi-multi

2020-8-18 Will
* Bugfix: Segfault on LV2 due to untested thread join.
* Cleaned up some warnings from lv2lint test program.
  Two warnings remaining. Also one fail I don't understand :(

2020-8-16 Will
* Final doc updates.
* Set release version 1.7.2

2020-8-16 Will
* Doc updates - no code changes.

2020-8-12- Will
* Merged in pull reqeuest for Kristian.
  Completes SubSynth frequency correction for all
  detune cases.
* Further bank startup enhancement and enabled.
  Copies new default instruments into .share
* Set latest Advanced guide.


2020-8-11- Will
* BugFix: GUI kitmode entries updating wrong items.
* Started work on Banks enhancement.
  Currently disabled.

2020-8-10- Will
* Provisional fix for SubSynth frequency bug.

2020-8-8 Will
* Removed references to Jack in LV2.
  Used time_t instead of jack_nframes_t
* Applied patch from Hubert.
  Removed jack reference from LV2 cmake file.

2020-8-2 Will
* Clarifed CLI 'solo' controls.
* Further refinements to 'solo' NRPNs
* Updated docs.

2020-7-30 Will
* BugFix: NRPN 'Solo' not working. Changed actual control numbers.
* Revised NRPN recognition, particularly shortform ones.
* Updated docs.
* Started ODF format of full list of CCs and NRPNs (in docs).

2020-7-26 Will