@@ -1069,7 +1069,7 @@ class PADnoteUI {: {public PresetsUI_}
         action = TOPLEVEL::action::lowPrio;
     }
     type |= TOPLEVEL::type::Write;
-    collect_data(synth, value, action, (Fl::event_button() | type), control, partnum, kititem, 2, insert, UNUSED, UNUSED, miscmsg);} {}
+    collect_data(synth, value, action, type, control, partnum, kititem, 2, insert, UNUSED, UNUSED, miscmsg);} {}
   }
   Function {returns_update(CommandBlock *getData)} {} {
     code {//
