@@ -518,7 +518,7 @@ class VectorUI {} {
             insert = BaseChan;
         }
         type |= TOPLEVEL::type::Write;
-        collect_data(synth, value, action, (Fl::event_button() | type), control, part, kit, engine, insert, parameter, UNUSED, miscmsg);} {}
+        collect_data(synth, value, action, type, control, part, kit, engine, insert, parameter, UNUSED, miscmsg);} {}
   }
   Function {returns_update(CommandBlock *getData)} {} {
     code {//
